# asc19f6

./: LICENSE  README.md
app/asc19f6chart/: asc19f6chart.pro  clear.bat  clear.sh  main.cpp
app/asc19f6gc/: CMakeLists.txt  asc19f6gc.pro  build.sh  clear.bat  clear.sh  main.cpp
app/asc19f6plot/: CMakeLists.txt  ChangeLog  asc19f6plot.pro  clear.bat  clear.sh  main.cpp
app/asc19f6qwt/: ascemqwt.pro  build.sh  clear.bat  clear.sh  main.cpp
app/asc19f6torque/: CMakeLists.txt  asc19f6torque.pro  clear.bat  clear.sh  main.cpp
src/: asc19f6gc.pri  asc19f6plot.pri  asc19f6qwt.pri  casc19f6.cpp  casc19f6.h  casc19f6ex.cpp  casc19f6ex.h  casc19f6gc.cpp  casc19f6gc.h  casc19f6main.cpp  casc19f6main.h  casc19f6plot.cpp  casc19f6plot.h  casc19f6qwt.cpp  casc19f6qwt.h  casc19f6torque.cpp  casc19f6torque.h  casc19f6types.h
src/aPKF/: gc.c  pu.c  rocket.c  torque.c  utils.c  zvsin.c  zvstep.c
